[package]
name = "peer-service"
rust-version = "1.60"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
babe = { package = "sc-consensus-babe", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
beefy-primitives = { git = "https://github.com/karanvir12/substrate36.git" , package="sp-beefy",branch = "relpeer" }
beefy-gadget = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-support = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
mmr-gadget = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-mmr-primitives = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-block-builder = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-chain-spec = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-client-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-client-db = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus-slots = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-executor = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-network = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-network-common = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-network-sync = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-transaction-pool = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-sync-state-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-basic-authorship = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-offchain = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-sysinfo = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
service = { package = "sc-service", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
telemetry = { package = "sc-telemetry", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-authorship = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
consensus_common = { package = "sp-consensus", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
inherents = { package = "sp-inherents", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-block-builder = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-blockchain = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-session = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-storage = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-transaction-pool = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-trie = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-timestamp = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-state-machine = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-im-online = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-staking = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

# External Crates
futures = "0.3.21"
hex-literal = "0.3.4"
gum = { package = "tracing-gum", path = "../gum/" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kvdb = "0.13.0"
kvdb-rocksdb = { version = "0.17.0", optional = true }
parity-db = { version = "0.4.2", optional = true }

async-trait = "0.1.57"
lru = "0.8"

# Polkadot
peer-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
peer-overseer = { path = "../overseer" }
peer-client = { path = "../client", default-features = false, optional = true }
peer-parachain = { path = "../../parachain" }
peer-primitives = { path = "../../primitives" }
peer-node-primitives = { path = "../primitives" }
peer-rpc = { path = "../../rpc" }
peer-node-subsystem = {path = "../subsystem" }
peer-node-subsystem-util = { path = "../subsystem-util" }
peer-node-subsystem-types = { path = "../subsystem-types" }
Peer-Runtime-parachains = { path = "../../runtime/parachains" }
peer-node-network-protocol = { path = "../network/protocol" }

# Polkadot Runtime Constants
Peer-Runtime-constants = { path = "../../runtime/polkadot/constants", optional = true }

# Polkadot Runtimes
Peer-Runtime = { path = "../../runtime/polkadot", optional = true }

# Polkadot Subsystems
polkadot-approval-distribution = { path = "../network/approval-distribution", optional = true }
peer-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
polkadot-availability-distribution = { path = "../network/availability-distribution", optional = true }
polkadot-availability-recovery = { path = "../network/availability-recovery", optional = true }
peer-collator-protocol = { path = "../network/collator-protocol", optional = true }
peer-dispute-distribution = { path = "../network/dispute-distribution", optional = true }
peer-gossip-support = { path = "../network/gossip-support", optional = true }
peer-network-bridge = { path = "../network/bridge", optional = true }
peer-node-collation-generation = { path = "../collation-generation", optional = true }
peer-node-core-approval-voting = { path = "../core/approval-voting", optional = true }
peer-node-core-av-store = { path = "../core/av-store", optional = true }
peer-node-core-backing = { path = "../core/backing", optional = true }
peer-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
peer-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
peer-node-core-chain-api = { path = "../core/chain-api", optional = true }
peer-node-core-chain-selection = { path = "../core/chain-selection", optional = true }
peer-node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
peer-node-core-provisioner = { path = "../core/provisioner", optional = true }
peer-node-core-pvf-checker = { path = "../core/pvf-checker", optional = true }
peer-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
peer-statement-distribution = { path = "../network/statement-distribution", optional = true }

# RPC
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus-babe-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-consensus-epochs = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-finality-grandpa-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
mmr-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
beefy-gadget-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
substrate-state-trie-migration-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-transaction-payment-rpc = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }

# Peer-Runtime = { version = "3.0.0-dev", path = "../runtime/polkadot" }

# Frontier
fc-cli = { path = "../../evm-client/cli" }
fc-consensus = { path = "../../evm-client/consensus" }
fc-db = { path = "../../evm-client/db" }
fc-mapping-sync = { path = "../../evm-client/mapping-sync" }
fc-rpc = { path = "../../evm-client/rpc" }
fc-rpc-core = { path = "../../evm-client/rpc-core" }
fp-consensus = { path = "../../evm-primitives/consensus" }
fp-dynamic-fee = { path = "../../evm-primitives/dynamic-fee" }
fp-evm = { path = "../../evm-primitives/evm" }
fp-rpc = { path = "../../evm-primitives/rpc" }
fp-storage = { path = "../../evm-primitives/storage" }
pallet-evm = {path = "../../evm-frame/evm"}
pallet-ethereum = {path = "../../evm-frame/ethereum"}

[dev-dependencies]
peer-test-client = { path = "../test/client" }
peer-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
log = "0.4.17"
assert_matches = "1.5.0"
tempfile = "3.2"

[features]
default = ["db", "full-node", "polkadot-native"]

db = [
	"service/rocksdb"
]

full-node = [
	"peer-node-core-av-store",
	"peer-node-core-approval-voting",
	"peer-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"peer-client",
	"peer-collator-protocol",
	"peer-dispute-distribution",
	"peer-gossip-support",
	"peer-network-bridge",
	"peer-node-collation-generation",
	"peer-node-core-backing",
	"peer-node-core-bitfield-signing",
	"peer-node-core-candidate-validation",
	"peer-node-core-chain-api",
	"peer-node-core-chain-selection",
	"peer-node-core-dispute-coordinator",
	"peer-node-core-provisioner",
	"peer-node-core-runtime-api",
	"peer-statement-distribution",
	"polkadot-approval-distribution",
	"peer-node-core-pvf-checker",
	"kvdb-rocksdb",
	"parity-db",
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = [ "Peer-Runtime", "Peer-Runtime-constants", "peer-client/polkadot" ]

runtime-benchmarks = [
	"Peer-Runtime?/runtime-benchmarks",

	"service/runtime-benchmarks",
]
try-runtime = [
	"Peer-Runtime?/try-runtime",
]
fast-runtime = [
	"Peer-Runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"peer-client/runtime-metrics",
	"Peer-Runtime?/runtime-metrics",
	"Peer-Runtime-parachains/runtime-metrics"
]
