[package]
name = "peer-node-subsystem-types"
description = "Subsystem traits and message definitions"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
peer-primitives = { path = "../../primitives" }
peer-node-primitives = { path = "../primitives" }
peer-node-network-protocol = { path = "../network/protocol" }
peer-statement-table = { path = "../../statement-table" }
peer-node-jaeger = { path = "../jaeger" }
orchestra = "0.0.2"
sc-network = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-api = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-consensus-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
smallvec = "1.8.0"
substrate-prometheus-endpoint = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
thiserror = "1.0.31"
async-trait = "0.1.57"
