[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", features = ["std"] , branch = "relpeer" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
