[package]
name = "Peer-Runtime-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
impl-trait-for-tuples = "0.2.2"
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"

beefy-primitives = { git = "https://github.com/karanvir12/substrate36.git", default-features = false,package="sp-beefy", branch = "relpeer" }
sp-api = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
inherents = { package = "sp-inherents", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-std = { package = "sp-std", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-session = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-staking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-npos-elections = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }

pallet-authorship = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-balances = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-session = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-support = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-staking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-staking-reward-fn = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-system = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-timestamp = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-vesting = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-transaction-payment = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-treasury = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-election-provider-multi-phase = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-beefy-mmr = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-election-provider-support = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-bags-list = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }

frame-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
pallet-babe = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }

primitives = { package = "peer-primitives", path = "../../primitives", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false }
runtime-parachains = { package = "Peer-Runtime-parachains", path = "../parachains", default-features = false }

slot-range-helper = { path = "slot_range_helper", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
frame-support-test = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-babe = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
pallet-treasury = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
serde_json = "1.0.81"
libsecp256k1 = "0.7.0"
test-helpers = { package = "peer-primitives-test-helpers", path = "../../primitives/test-helpers" }

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"rustc-hex/std",
	"serde_derive",
	"serde/std",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-beefy-mmr/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-staking-reward-fn/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-election-provider-multi-phase/std",
	"slot-range-helper/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"frame-system/std",
	"libsecp256k1/std",
	"runtime-parachains/std",
	"xcm/std",
	"sp-npos-elections/std",
	"pallet-bags-list/std"
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"libsecp256k1/static-context",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
]
try-runtime = [
	"runtime-parachains/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
]
