[package]
name = "Peer-Runtime-parachains"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", features = [ "derive" ], optional = true }
derive_more = "0.99.17"
bitflags = "1.3.2"

sp-api = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
inherents = { package = "sp-inherents", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-std = { package = "sp-std", git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-io = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-runtime = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-session = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-staking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-core = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
sp-keystore = { git = "https://github.com/karanvir12/substrate36.git", optional = true , branch = "relpeer" }
sp-application-crypto = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
sp-tracing = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }

pallet-authority-discovery = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-authorship = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-balances = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-babe = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-session = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-staking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-timestamp = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
pallet-vesting = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-benchmarking = { git = "https://github.com/karanvir12/substrate36.git", default-features = false, optional = true , branch = "relpeer" }
frame-support = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }
frame-system = { git = "https://github.com/karanvir12/substrate36.git", default-features = false , branch = "relpeer" }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
static_assertions = { version = "1.1.0", optional = true }
Peer-Runtime-metrics = { path = "../metrics", default-features = false}

[dev-dependencies]
futures = "0.3.21"
hex-literal = "0.3.4"
keyring = { package = "sp-keyring", git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
frame-support-test = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
sc-keystore = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../primitives/test-helpers"}
sp-tracing = { git = "https://github.com/karanvir12/substrate36.git", branch = "relpeer" }
thousands = "0.2.0"
assert_matches = "1"
serde_json = "1.0.85"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
	"log/std",
	"Peer-Runtime-metrics/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"static_assertions",
	"sp-application-crypto",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
]
runtime-metrics = ["sp-tracing/with-tracing", "Peer-Runtime-metrics/runtime-metrics"]
